--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,14 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
         <version>3.3.1</version>
+        <dependencies>
+          <!-- Pin Checkstyle to a version that supports allowMissingThrowsTags -->
+          <dependency>
+            <groupId>com.puppycrawl.tools</groupId>
+            <artifactId>checkstyle</artifactId>
+            <version>10.17.0</version>
+          </dependency>
+        </dependencies>
         <configuration>
           <configLocation>config/checkstyle/checkstyle.xml</configLocation>
           <consoleOutput>true</consoleOutput>
